# unity-monorepo

./: .gitignore  .markdownlintrc  .pre-commit-config.yaml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
cloudformation-template/: unity-mc.main.template.yaml
docs/: index.html
libs/unity-py/: CHANGELOG.md  README.md  pyproject.toml
libs/unity-py/docs/source/: conf.py  index.rst
libs/unity-py/notebooks/: ogc_notebook.ipynb
libs/unity-py/tests/: catalog.json  test_unity_application_services.py  test_unity_data_service.py  test_unity_health_service.py  urn:nasa:unity:emit:dev:my_test_collection_id2.json  urn:nasa:unity:emit:dev:my_test_collection_id2___1.json
libs/unity-py/tests/test_files/: health_api_mock_data.json
libs/unity-py/tests/unity_sds_client/services/: test_data_service.py
libs/unity-py/unity_sds_client/: unity.py  unity_session.py
libs/unity-py/unity_sds_client/envs/: environments.cfg
libs/unity-py/unity_sds_client/resources/: collection.py  job.py  job_status.py  process.py  stac_collection.py
libs/unity-py/unity_sds_client/services/: application_service.py  data_service.py  health_service.py  process_service.py
libs/unity-py/unity_sds_client/services/application_catalog/: base.py  dockstore.py
nightly_tests/: deploy.sh  run.sh  (+1 more)
tests/system-tests/: README.md  env.cfg  pyproject.toml  regression_test.sh  requirements.txt  run_system_tests.sh  set_test_params.sh  testrail.yml
tests/system-tests/features/: environment.py
tests/system-tests/features/apgs/: packaging.feature
tests/system-tests/features/application_catalog/: catalog.feature
tests/system-tests/features/data_catalog/: dapa.feature  managed_service.feature  parent_collections.feature  stac.feature
tests/system-tests/features/sps/: cwl.feature
tests/system-tests/features/steps/: import_steps.py
tests/system-tests/features/steps/apgs/: steps.py
tests/system-tests/features/steps/data_catalog/: steps.py
tests/system-tests/features/steps/sps/: steps.py
tests/system-tests/support_files/: stac.schema.json
(+95 files in other folders)
